[package]
name = "magicblock-processor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

magicblock-accounts-db = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-program = { workspace = true }

solana-account = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget-program = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee = { workspace = true }
solana-fee-structure = { workspace = true }
solana-address-lookup-table-program = { workspace = true }
solana-program = { workspace = true }
solana-loader-v4-program = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent-collector = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-svm = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status = { workspace = true }
solana-transaction-error = { workspace = true }

[dev-dependencies]
guinea = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
test-kit = { workspace = true }
