[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "magicblock-replicator"
repository.workspace = true
version.workspace = true

[dependencies]
async-nats = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-metrics = { workspace = true }
notify = { version = "8.0", features = ["macos_kqueue"] }
serde = { workspace = true, features = ["derive"] }
solana-hash = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true, features = ["serde"] }
solana-transaction-error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
