[package]
name = "magicblock-rpc-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
log = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
solana-transaction-error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
